# nccl-inspector

./: .gitignore  Cargo.toml  README.md  build.rs
nccl_shim/: Makefile  shim.c  test_harness  test_harness.cu  test_harness_mp  test_harness_mp.cu
src/: app.rs  main.rs  tui.rs
src/bpf/: rdma_probe.bpf.c
src/nccl/: mod.rs
