[package]
name = "nccl_inspector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nccl_inspector"
path = "src/main.rs"

[dependencies]
libbpf-rs = "0.25"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
ratatui = "0.28"
crossterm = "0.28"
serde_json = "1"

[build-dependencies]
libbpf-cargo = "0.25"
